Implemented round-robin assignment for raise inspection subprocess